# krx-netbuy-crawling

./: pyproject.toml  requirements.txt  test_samsung_price.py
.agent/: agents.md
src/commands/: crawl.py
src/core/ports/: price_data_port.py
src/core/services/: daily_routine_service.py  high_price_indicator_service.py  krx_fetch_service.py  master_data_service.py
src/infra/adapters/: daily_excel_adapter.py  krx_http_adapter.py  pykrx_price_adapter.py  ranking_excel_adapter.py  watchlist_file_adapter.py
src/infra/adapters/excel/: excel_formatter.py
src/infra/adapters/storage/: google_drive_adapter.py  local_storage_adapter.py
tests/: verify_krx_hybrid.py
tests/unit/: test_high_price_indicator_service.py  test_krx_fetch_raw.py  test_master_data_service.py  test_pykrx_price_adapter.py
