[project]
name = "krx-auto-crawling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "cloudscraper>=1.2.71",
    "dart-fss>=0.4.14",
    "dotenv>=0.9.9",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "pyxlsb>=1.0.10",
    "tabulate>=0.9.0",
    "xlsxwriter>=3.2.9",
    "google-api-python-client>=2.155.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "typer>=0.9.0",
    "pykrx>=1.0.51",
    "setuptools>=80.9.0",
]

[project.scripts]
netbuy = "cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# src 디렉터리 하위의 모든 패키지를 자동으로 찾도록 설정
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "radon>=6.0.1",
]
